@@ -35,4 +35,8 @@ org.jcrontab.Crontab.refreshFrequency = 3
 org.jcrontab.log.Logger=org.jcrontab.log.Log4JLogger
 org.jcrontab.log.log4J.Properties={$HOME}.jcrontab/log4j.properties
 #org.jcrontab.data.FileOpener=file
+#Those parameters are to get the Holidays from the system
 #org.jcrontab.data.holidaysource=org.jcrontab.data.HoliDayFileSource
+#org.jcrontab.data.holidaysfilesource={$HOME}.jcrontab/holidays
+#To change this plz refer to java.text.SimpleDateFormat
+#org.jcrontab.data.dateFormat=dd/MM/yyyy
